feat(covers): improve cover image handling and caching